Fixed about me image to be responsize in order for it to maintain its ratio. Also made it aligned with text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,14 +49,25 @@ nav {
 
 .spotlight-box {
     text-align: center;
-    /* position: absolute; */
     color: white;
     font-family: Helvetica, Arial, sans-serif;
     margin-top: 6rem;
 }
 
+.intro-text {
+    display: none;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 0.1em;
+    line-height: 3.0;
+}
+
+.about-me-pic {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+  }
+
 .section-container {
-    /* padding: 4%; */
     margin-top: 3.0rem 0;
     width: 100%;
 }
@@ -69,31 +80,19 @@ nav {
     padding: 2%;
 }
 
-.intro-text {
-    display: none;
-    font-family: 'Oswald', sans-serif;
-    letter-spacing: 0.1em;
-    line-height: 3.0;
-}
-
 h2.section-title {
     font-weight: 300;
     font-family: 'Raleway', sans-serif;
-    /* border-bottom: 4px double #f00;
-    border-radius: 25px; */
     font-size: 30px;
     margin: 60px 40px auto auto;
     padding: 30px 0;
     width: 100%;
-    /* margin-top: 60px;
-    margin-bottom: 40px; */
     text-align: center;
 }
 
 p {
     margin: 3% 0;
     line-height: 1.9em;
-    /* font-family: "Arial, 'sans-serif'"; */
     text-align: justify;
 }
 
@@ -233,23 +232,13 @@ ul.navbar-nav li a.nav-link {
     }
 }
 
-/* #triangle {
-    margin-top: -3%;
-} */
 
-/* Slideshow container */
 .slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
   }
   
-  /* Hide the images by default
-  .mySlides {
-    display: none;
-  } */
-  
-  /* Next & previous buttons */
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -334,22 +323,18 @@ ul.navbar-nav li a.nav-link {
   @media screen and (max-width: 768px) {
     #spotlight {
         height: 60vh;
-        /* width: 768px; */
     }
     .intro-text {
         display: none;
         font-family: 'Oswald', sans-serif;
         letter-spacing: 0.1em;
-        line-height: 1.0;
+        line-height: 3.0;
     }
   }
 
   @media screen and (max-width: 560px) {
        #spotlight {
         background-image: url('../images/bg-spotlight-mini.jpg');
-        /* width: 100%;
-        height: 230px; 
-        background-size: 100% 100%; */
       }
 
       h2.intro-text {
@@ -358,10 +343,6 @@ ul.navbar-nav li a.nav-link {
       h1.intro-text {
           font-size: 1.6rem;
       }
-
-      /* .section-container {
-        padding: 5%;
-    } */
   }
 
   @media only screen and (max-width: 1366px) {
@@ -369,3 +350,10 @@ ul.navbar-nav li a.nav-link {
           background-attachment: scroll;
       }
   }
+
+  /* @media screen and (min-width: 769px) and (max-width: 1000px) {
+      .about-me-pic {
+        display: inline-block;
+        vertical-align: middle;
+      }
+  } */
